kubernetes/apps/song-list/production/back.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-list-backend
  labels:
    app: song-list-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: song-list-backend
  template:
    metadata:
      labels:
        app: song-list-backend
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/song-list-backend:1.0.5 # {"$imagepolicy": "default:song-list-backend"}
          ports:
            - containerPort: 8080
