kubernetes/apps/song-list/production/front.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: song-list-frontend
  labels:
    app: song-list-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: song-list-frontend
  template:
    metadata:
      labels:
        app: song-list-frontend
    spec:
      containers:
        - name: app
          image: ghcr.io/piny940/song-list-frontend:1.0.9 # {"$imagepolicy": "default:song-list-frontend"}
          ports:
            - containerPort: 4400
