kubernetes/apps/song-list/production/back.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: song-list-backend
spec:
  selector:
    app: song-list-backend
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
