kubernetes/apps/song-list/production/front.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: song-list-frontend
spec:
  selector:
    app: song-list-frontend
  ports:
    - name: http
      protocol: TCP
      port: 4400
      targetPort: 4400
  type: ClusterIP
